# poc-rs-sqs-batch

./: README.md
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
producer/: Cargo.toml
producer/src/: lib.rs  main.rs
terraform/: cloudwatch.tf  dynamodb.tf  iam_policies.tf  iam_roles.tf  lambda.tf  main.tf  s3.tf  sqs.tf  variables.tf
