[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.69.0"
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["sqs"] }
csv = "1.3.1"
itertools = "0.14.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
